# scribe

./: .gitignore  README.md  pyproject.toml
src/scribe/: audio_utils.py  meet.py  transcribe.py
